Colab을 통해 생성됨

--- a/Pinecone_t1.ipynb
+++ b/Pinecone_t1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Rm9rNKE9McnqjR2enLMSIIi_UJeRtw0g",
-      "authorship_tag": "ABX9TyO2moO13LfsB7KY7k0/DgUT",
+      "authorship_tag": "ABX9TyMr9GsiXZ53I0rZw/etzRSi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4416,7 +4416,7 @@
       "source": [
         "#index 불러오기\n",
         "index = pc.Index('quicktest')\n",
-        "index"
+        "print(index)"
       ],
       "metadata": {
         "id": "Y6jM56l-pKlb",
